# career-compass

./: .env  .gitignore  EXTRACTION_STRATEGY.md  KOYEB_DEPLOYMENT.md  OAUTH_IMPLEMENTATION_PLAN.md  README.md  RELEASE_NOTES.md  RENDER_DEPLOYMENT.md  SELF_HOST_GUIDE.md  SETUP_GUIDE.md  TEST_RESULTS_SUMMARY.md  check_errors.py  package.json  render.yaml  test_case_51.py  test_endpoints.py
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/config/: settings.rs
backend/src/modules/ai/: gemini_client.rs
backend/src/modules/auth/: handlers.rs  mod.rs  models.rs  oauth.rs  service.rs
backend/src/modules/content_generation/: handlers.rs  models.rs  service.rs  template_engine.rs
backend/src/modules/scoring/: baseline.rs
backend/src/shared/: app_state.rs  mod.rs
backend/templates/: cover_letter_casual_en.tera  cover_letter_casual_vi.tera  cover_letter_formal_en.tera  cover_letter_formal_vi.tera  email_body_casual_en.tera  email_body_casual_vi.tera  email_body_formal_en.tera  email_body_formal_vi.tera
frontend/: package-lock.json  package.json
nlp-service/: PR4_SUMMARY.md  requirements.txt
nlp-service/app/: enhanced_scoring.py  main.py  models.py
nlp-service/test_data/: scoring_test_results.json
src/: App.tsx  index.css
src/components/: ChatbotWidget.tsx  Footer.tsx  Navbar.tsx  StarryBackground.tsx
src/contexts/: AuthContext.tsx  (+2 more)
supabase/: config.toml
test_data/: GENERATION_TEST_SUMMARY.md  README_TEST_RESULTS.txt  analyze_results.py  generation_test_report.html  run_generation_tests.ps1  run_generation_tests.py  test_samples.ps1
(+23 files in other folders)
